--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Explanatory and Predictive Landslide Susceptibility Modelling Using Statistical and Machine Learning Techniques: Case Study of Valtellina Valley, Italy" 
+title: "Is There a Space in Landslide Susceptibility Modelling: A Case Study of Valtellina Valley, Northern Italy" 
 ---
 
 ![](images/landslides%20(4).png)
