--- a/studyarea.qmd
+++ b/studyarea.qmd
@@ -10,24 +10,18 @@ title: "Study Area"
 
 ![](images/study_area-01.png)
 
-Valtellina Valley, located in the Central Alps of Northern Italy, is chosen as the study area. The valley
-extends between 515,000 metres and 620,000 metres in easting (9.24°E to 10.63°E in longitude), and
-between 5,050,000 metres and 5,170,000 metres in northing (46.00°N to 46.64°N in latitude) and covers about 3308 square kilometres. The average mountain elevation there ranges from 2,500 to 3,000 meters with the bottom of the valley lying about 1000 to 1100 metres above sea level. The valley is cut by the Adda River flowing from North to South and characterized by a superimposed fluvial morphology and high steep slopes, akin to typical alpine glacial valleys \[1\]. The geomorphological features of the valley exhibit a pronounced contrast between its opposing slopes. The East--West orientation of the valley is also attributed to the geologic fault called the Periadriatic Seam, which imposes tectonic lineament upon the valley \[2\].
+Valtellina Valley, located in the Central Alps of Northern Italy, is chosen as the study area. The valley extends between 515,000 metres and 620,000 metres in easting (9.24°E to 10.63°E in longitude), and between 5,050,000 metres and 5,170,000 metres in northing (46.00°N to 46.64°N in latitude) and covers about 3308 square kilometres. The average mountain elevation there ranges from 2,500 to 3,000 meters with the bottom of the valley lying about 1000 to 1100 metres above sea level. The valley is cut by the Adda River flowing from North to South and characterized by a superimposed fluvial morphology and high steep slopes, akin to typical alpine glacial valleys \[1\]. The geomorphological features of the valley exhibit a pronounced contrast between its opposing slopes. The East--West orientation of the valley is also attributed to the geologic fault called the Periadriatic Seam, which imposes tectonic lineament upon the valley \[2\].
 
-Valtellina valley has experienced significant damage and destruction over the century from landslides
-such as the historic Valpola landslide and floods. The landslides are mostly attributed to geological
-instability arising from tectonic and post-glacial conditions \[3\], soil type, soil moisture and slope acclivity which activate mass movements \[4\]. Additionally, Valtellina\'s wine agriculture like Chiavennasca grapes, popular ski and holiday towns such as Sondrio, Livigno, Aprica, Bormio and Morbegno are highly sort after. The resulting surge in economic activities and overdevelopment of human settlements have extensively remodified the landform\'s geomorphology which exacerbate Valtellina\'s landslide susceptibility \[2-3\]. Overall, the region\'s steep slopes, heavy rainfall, geological instability and man-made modifications to the natural landscape/ make it an interesting study area for this study.
+Valtellina valley has experienced significant damage and destruction over the century from landslides such as the historic Valpola landslide and floods. The landslides are mostly attributed to geological instability arising from tectonic and post-glacial conditions \[3\], soil type, soil moisture and slope acclivity which activate mass movements \[4\]. Additionally, Valtellina's wine agriculture like Chiavennasca grapes, popular ski and holiday towns such as Sondrio, Livigno, Aprica, Bormio and Morbegno are highly sort after. The resulting surge in economic activities and overdevelopment of human settlements have extensively remodified the landform's geomorphology which exacerbate Valtellina's landslide susceptibility \[2-3\]. Overall, the region's steep slopes, heavy rainfall, geological instability and man-made modifications to the natural landscape/ make it an interesting study area for this study.
 
 ::: {style="color: #603494;"}
 #### **References** {style="color: #603494;"}
 :::
 
-1.  Alexander, D.: Valtellina landslide and flood emergency, Northern Italy, 1987. Disasters. 12,
-    212--222 (1988)
+1.  Alexander, D.: Valtellina landslide and flood emergency, Northern Italy, 1987. Disasters. 12, 212--222 (1988)
 
-2.  Luino, F., De Graff, J., Biddoccu, M., Faccini, F., Freppaz, M., Roccati, A., Ungaro, F., D\'Amico, M., Turconi, L.: The role of soil type in triggering shallow landslides in the Alps (Lombardy, northern Italy). Land. 11, 1125 (2022)
+2.  Luino, F., De Graff, J., Biddoccu, M., Faccini, F., Freppaz, M., Roccati, A., Ungaro, F., D'Amico, M., Turconi, L.: The role of soil type in triggering shallow landslides in the Alps (Lombardy, northern Italy). Land. 11, 1125 (2022)
 
-3.  Azzoni, A., Chiesa, S., Frassoni, A., Govi, M.: The Valpola landslide. Engineering Geology. 33,
-    59--70 (1992)
+3.  Azzoni, A., Chiesa, S., Frassoni, A., Govi, M.: The Valpola landslide. Engineering Geology. 33, 59--70 (1992)
 
 4.  Camera, C., Apuani, T., Masetti, M.: Modeling the stability of terraced slopes: An approach from Valtellina (Northern Italy). Environmental Earth Sciences. 74, 855--868 (2015)
