--- a/methodology.qmd
+++ b/methodology.qmd
@@ -60,6 +60,8 @@ Particularly in landslide identification, machine learning models are lacking in
 
 ### 4.0 Research Design
 
+![](images/Screenshot 2024-04-16 at 7.48.44 PM.png)
+
 ### 5.0 References
 
 -   Cascini, L.: Applicability of landslide susceptibility and hazard zoning at different scales. Engineering Geology. 102, 164--177 (2008).
