--- a/predictivemodelling.qmd
+++ b/predictivemodelling.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Machine Learning Modelling"
+title: "Predictive Landslide Susceptibility Modelling Using Machine Learning Techniques"
 author:
   - name: Khant Min Naing
   - name: Ann Mei Yi Victoria Grace
